@@ -14,8 +14,10 @@ import org.gradle.jvm.tasks.Jar
 import org.gradle.language.jvm.tasks.ProcessResources
 import org.gradle.process.ExecOperations
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
+import org.jetbrains.compose.desktop.application.tasks.AbstractJPackageTask
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
+import java.io.ByteArrayOutputStream
 import java.io.File
 import java.util.Properties
 import javax.inject.Inject
@@ -73,6 +75,9 @@ abstract class GenerateRuntimeConfigsTask : DefaultTask() {
     @get:Input
     abstract val sentryEnvironment: Property<String>
 
+    @get:Input
+    abstract val tmdbApiKey: Property<String>
+
     @TaskAction
     fun generate() {
         val props = Properties()
@@ -109,7 +114,18 @@ abstract class GenerateRuntimeConfigsTask : DefaultTask() {
             )
         }
 
-        outDir.resolve("com/nuvio/app/features/tmdb/TmdbConfig.kt").delete()
+        outDir.resolve("com/nuvio/app/features/tmdb").apply {
+            mkdirs()
+            resolve("TmdbConfig.kt").writeText(
+                """
+                |package com.nuvio.app.features.tmdb
+                |
+                |object TmdbConfig {
+                |    const val API_KEY = "${tmdbApiKey.get()}"
+                |}
+                """.trimMargin()
+            )
+        }
 
         outDir.resolve("com/nuvio/app/features/trakt").apply {
             mkdirs()
@@ -507,7 +523,8 @@ val macosNotaryAppSpecificPassword = macosNotaryPassword
     ?.takeUnless { it.startsWith("@keychain:", ignoreCase = true) }
 
 val appVersionConfigFile = rootProject.file("iosApp/Configuration/Version.xcconfig")
-val releaseAppVersionName = readXcconfigValue(appVersionConfigFile, "MARKETING_VERSION")
+val releaseAppVersionName = providers.gradleProperty("nuvio.app.versionName").orNull
+    ?: readXcconfigValue(appVersionConfigFile, "MARKETING_VERSION")
     ?: error("MARKETING_VERSION is missing from ${appVersionConfigFile.path}")
 val releaseAppVersionCode = readXcconfigValue(appVersionConfigFile, "CURRENT_PROJECT_VERSION")
     ?.toIntOrNull()
@@ -651,6 +668,7 @@ val generateRuntimeConfigs = tasks.register<GenerateRuntimeConfigsTask>("generat
     supabaseFallbackUrl.set(runtimeConfigValue("NUVIO_SUPABASE_FALLBACK_URL"))
     sentryDsn.set(runtimeConfigValue("SENTRY_DSN"))
     sentryDesktopDsn.set(runtimeConfigValue("SENTRY_DESKTOP_DSN"))
+    tmdbApiKey.set(runtimeConfigValue("TMDB_API_KEY"))
     sentryEnvironment.set(
         when {
             requestedGradleTasks.any { "benchmark" in it } -> "benchmark"
@@ -774,6 +792,36 @@ val buildMacosPlayerBridge = tasks.register<Exec>("buildMacosPlayerBridge") {
     inputs.dir(macosLibmpvHeaders)
     outputs.file(macosPlayerBridgeOutput)
     commandLine(macosPlayerBridgeCommand)
+}
+
+// ---- Linux player bridge (system libmpv, X11 "wid" embedding) ----
+// Compiles a single JNI .so against the system libmpv + JDK JNI headers.
+// Requires a C++ toolchain, pkg-config, and libmpv development files on the
+// build host (all provided by the Nix dev shell).
+val isLinuxHost = System.getProperty("os.name").contains("linux", ignoreCase = true)
+val linuxPlayerBridgeSource = layout.projectDirectory.file("src/desktopMain/native/linux/player_bridge.cpp")
+val linuxPlayerBridgeOutput = layout.buildDirectory.file("native/linux/libplayer_bridge.so")
+val linuxPlayerBridgeJavaHome = providers.systemProperty("java.home").get()
+val linuxPlayerBridgeSourceFile = linuxPlayerBridgeSource.asFile
+val linuxPlayerBridgeOutputFile = linuxPlayerBridgeOutput.get().asFile
+val buildLinuxPlayerBridge = tasks.register<Exec>("buildLinuxPlayerBridge") {
+    notCompatibleWithConfigurationCache("Builds a host-local player bridge against system libmpv.")
+    enabled = isLinuxHost
+    inputs.file(linuxPlayerBridgeSourceFile)
+    outputs.file(linuxPlayerBridgeOutputFile)
+    val src = linuxPlayerBridgeSourceFile.absolutePath
+    val out = linuxPlayerBridgeOutputFile.absolutePath
+    val outParent = linuxPlayerBridgeOutputFile.parentFile
+    val jni = "$linuxPlayerBridgeJavaHome/include"
+    doFirst { outParent.mkdirs() }
+    commandLine(
+        "bash", "-c",
+        "c++ -std=c++17 -shared -fPIC -O2 " +
+            "-I'$jni' -I'$jni/linux' " +
+            "$(pkg-config --cflags mpv webkit2gtk-4.1 gtk+-3.0 x11 xcomposite xext) " +
+            "'$src' -o '$out' " +
+            "$(pkg-config --libs mpv webkit2gtk-4.1 gtk+-3.0 x11 xcomposite xext) -lpthread",
+    )
 }
 
 val windowsPlayerBridgeArch = when (System.getProperty("os.arch").lowercase()) {
@@ -1045,6 +1093,19 @@ tasks.withType<Jar>().configureEach {
             into("native/windows")
         }
     }
+    if (isLinuxHost && name == "desktopJar") {
+        dependsOn(buildLinuxPlayerBridge)
+        from(linuxPlayerBridgeOutput) {
+            into("native/linux")
+        }
+        // TorrServer ships as a classpath resource so P2P streaming works from
+        // any working directory and in packaged builds (macOS does the same via
+        // prepareMacosTorrServerResources; Linux needs no signing pass).
+        from(layout.projectDirectory.dir("src/desktopMain/torrserver")) {
+            include("linux-amd64/**")
+            into("torrserver")
+        }
+    }
 }
 
 tasks.matching { it.name == "prepareAppResources" }.configureEach {
@@ -1108,7 +1169,7 @@ kotlin {
         }
         minSdk = libs.versions.android.minSdk.get().toInt()
         androidResources.enable = true
-        withHostTest {}
+        withHostTest { isIncludeAndroidResources = true }
 
         compilerOptions {
             jvmTarget.set(JvmTarget.JVM_11)
@@ -1152,6 +1213,9 @@ kotlin {
                         compilerOpts("-I${nuvioEngineSliceDirectory.resolve("Headers").absolutePath}")
                         extraOpts("-libraryPath", nuvioEngineSliceDirectory.absolutePath)
                     }
+                }
+                configureEach {
+                    extraOpts("-Xccall-mode", "direct")
                 }
             }
 
@@ -1203,7 +1267,7 @@ kotlin {
                 implementation("androidx.recyclerview:recyclerview:1.4.0")
                 implementation("com.squareup.okhttp3:okhttp:4.12.0")
                 implementation("com.google.code.gson:gson:2.11.0")
-                implementation("io.github.peerless2012:ass-media:0.4.0-beta01")
+                implementation("io.github.peerless2012:ass-media:0.5.1")
                 implementation(libs.ktor.client.okhttp)
                 implementation(libs.sentry.android)
                 implementation(libs.androidx.media3.exoplayer.hls)
@@ -1218,7 +1282,6 @@ kotlin {
                 implementation(libs.androidx.media3.container)
                 implementation(libs.androidx.media3.extractor)
                 implementation(libs.mpv.android.lib)
-                implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1")
                 implementation(fileTree(mapOf("dir" to "libs", "include" to listOf("lib-*.aar"))))
                 if (androidDistribution == "full") {
                     implementation(files("libs/quickjs-kt-android-1.0.5-nuvio.aar"))
@@ -1251,6 +1314,13 @@ kotlin {
             }
         }
         val androidHostTest by getting {
+            dependencies {
+                implementation("org.robolectric:robolectric:4.16")
+                implementation("androidx.compose.ui:ui-test-junit4:${libs.versions.composeMultiplatform.get()}")
+                implementation("androidx.compose.ui:ui-test-manifest:${libs.versions.composeMultiplatform.get()}")
+                implementation("androidx.work:work-testing:${libs.versions.androidx.work.get()}")
+                implementation("com.squareup.okhttp3:mockwebserver:5.3.2")
+            }
             if (androidDistribution == "full") {
                 kotlin.srcDir(project.file("src/androidFullHostTest/kotlin"))
             }
@@ -1272,12 +1342,16 @@ kotlin {
             implementation(libs.compose.runtime)
             implementation(libs.compose.foundation)
             implementation(libs.compose.material3)
+            implementation(libs.compose.materialRipple)
             implementation(compose.materialIconsExtended)
             implementation(libs.compose.ui)
             implementation(libs.compose.components.resources)
             implementation(libs.compose.uiToolingPreview)
             implementation(libs.androidx.lifecycle.viewmodelCompose)
             implementation(libs.androidx.lifecycle.runtimeCompose)
+            implementation(libs.androidx.savedstate)
+            implementation(libs.androidx.savedstate.compose)
+            implementation(libs.kotlinx.coroutines.core)
             implementation(libs.kotlinx.serialization.json)
             implementation(libs.kotlinx.atomicfu)
             implementation(libs.kmpalette.core)
@@ -1288,6 +1362,11 @@ kotlin {
             implementation(libs.supabase.functions)
             implementation(libs.supabase.storage)
             implementation(libs.reorderable)
+        }
+        val desktopTest by getting {
+            dependencies {
+                implementation(compose.desktop.uiTestJUnit4)
+            }
         }
         commonTest.dependencies {
             implementation(libs.kotlin.test)
@@ -1308,15 +1387,19 @@ compose.desktop {
             ?: System.getenv("NUVIO_DESKTOP_SMOKE_PLAYER_URL")
         jvmArgs += listOfNotNull(
             "-Dapple.awt.application.appearance=NSAppearanceNameDarkAqua",
+            // Keep AWT from loading its own GTK (Swing L&F/file dialogs): the
+            // bridge owns the process's GTK via initGtkEarly (skoruppa's fix).
+            "-Djdk.gtk.version=0",
             "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
             "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
             "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
             "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED",
             smokePlayerUrl?.takeIf { it.isNotBlank() }?.let { "-Dnuvio.desktop.smokePlayerUrl=$it" },
         )
 
         nativeDistributions {
-            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
+            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb, TargetFormat.Rpm, TargetFormat.AppImage)
             packageName = forkAppNameValue
             packageVersion = desktopReleasePackageVersion
             vendor = forkVendorValue
@@ -1384,6 +1467,10 @@ compose.desktop {
             }
             linux {
                 iconFile.set(project.file("src/desktopMain/resources/icons/nuvio-app-icon-transparent.png"))
+                debMaintainer = "contact@nuvio.tv"
+                shortcut = true
+                menuGroup = "Nuvio"
+                appCategory = "AudioVideo"
             }
         }
 
@@ -1585,6 +1672,22 @@ tasks.matching { it.name == "createReleaseDistributable" }.configureEach {
         )
     }
 }
+fun normalizedLinuxArch(value: String): String =
+    when (value.lowercase()) {
+        "amd64", "x64", "x86_64" -> "x86_64"
+        "aarch64", "arm64" -> "aarch64"
+        else -> value.lowercase()
+    }
+
+val linuxAppImageArch = normalizedLinuxArch(System.getProperty("os.arch"))
+
+fun findExecutableOnPath(name: String): File? =
+    System.getenv("PATH")
+        ?.split(File.pathSeparatorChar)
+        ?.asSequence()
+        ?.map(::File)
+        ?.map { it.resolve(name) }
+        ?.firstOrNull { it.isFile && it.canExecute() }
 
 tasks.matching { it.name == "packageDmg" }.configureEach {
     doLast {
@@ -1628,6 +1731,182 @@ tasks.matching { it.name == "packageReleaseMsi" }.configureEach {
     doLast {
         publishWindowsMsiOutput(release = true)
     }
+}
+
+if (isLinuxHost) {
+    val linuxDebPatchScript = rootProject.layout.projectDirectory.file("scripts/linux/patch-linux-deb.sh")
+    val linuxDebVerifyScript = rootProject.layout.projectDirectory.file("scripts/linux/verify-linux-deb.sh")
+    val linuxRpmPatchScript = rootProject.layout.projectDirectory.file("scripts/linux/patch-linux-rpm.sh")
+    val linuxRpmVerifyScript = rootProject.layout.projectDirectory.file("scripts/linux/verify-linux-rpm.sh")
+    val linuxAppImageBuildScript = rootProject.layout.projectDirectory.file("scripts/linux/build-appimage.sh")
+
+    fun tailLines(text: String, maxLines: Int = 120): String {
+        val lines = text.lines()
+        if (lines.size <= maxLines) {
+            return text.trimEnd()
+        }
+        return lines.takeLast(maxLines).joinToString("\n").trimEnd()
+    }
+
+    fun runLinuxPackagingScript(command: List<String>, artifactLabel: String) {
+        val process = ProcessBuilder(command)
+            .redirectErrorStream(true)
+            .start()
+        val output = process.inputStream.bufferedReader().use { it.readText() }
+        val exitCode = process.waitFor()
+        if (output.isNotBlank()) {
+            logger.lifecycle(output.trimEnd())
+        }
+        check(exitCode == 0) {
+            buildString {
+                appendLine("Linux $artifactLabel command failed with exit code $exitCode: ${command.joinToString(" ")}")
+                val trimmed = output.trim()
+                if (trimmed.isNotEmpty()) {
+                    appendLine("--- command output (tail) ---")
+                    appendLine(tailLines(trimmed))
+                } else {
+                    appendLine("--- command output ---")
+                    appendLine("<empty>")
+                }
+            }
+        }
+    }
+
+    fun publishLinuxAppImageOutput(
+        task: AbstractJPackageTask,
+        release: Boolean,
+        appImageBuildScript: File,
+    ) {
+        val outputDir = task.destinationDir.get().asFile
+        val effectivePackageName = task.packageName.get().toString()
+        val appRootCandidates = listOf(
+            outputDir.resolve(effectivePackageName),
+            outputDir.resolve(effectivePackageName.lowercase()),
+        )
+        val appRoot = appRootCandidates.firstOrNull(File::isDirectory)
+            ?: error("Expected Linux app-image directory in ${outputDir.absolutePath} for ${task.name}.")
+
+        val appImageTool = providers.gradleProperty("nuvio.appimagetool.path").orNull
+            ?.takeIf { it.isNotBlank() }
+            ?.let(::File)
+            ?: System.getenv("APPIMAGETOOL")
+                ?.takeIf { it.isNotBlank() }
+                ?.let(::File)
+            ?: findExecutableOnPath("appimagetool")
+            ?: error(
+                "AppImage packaging requires appimagetool. Install it on PATH, set APPIMAGETOOL, " +
+                    "or pass -Pnuvio.appimagetool.path=/path/to/appimagetool."
+            )
+
+        val updateInformation = providers.gradleProperty("nuvio.appimage.updateInformation").orNull
+            ?.takeIf { it.isNotBlank() }
+            ?: System.getenv("APPIMAGE_UPDATE_INFORMATION")?.takeIf { it.isNotBlank() }
+            ?: System.getenv("UPDATE_INFORMATION")?.takeIf { it.isNotBlank() }
+        val websiteUrl = providers.gradleProperty("nuvio.appimage.websiteUrl").orNull
+            ?.takeIf { it.isNotBlank() }
+            ?: System.getenv("APPIMAGE_WEBSITE_URL")?.takeIf { it.isNotBlank() }
+
+        val distributionName = if (release) "main-release" else "main"
+        val appImageName = "Nuvio-Linux-$linuxAppImageArch-$desktopReleaseVersionName.AppImage"
+        val outputAppImage = layout.buildDirectory
+            .dir("compose/binaries/$distributionName/app")
+            .get()
+            .asFile
+            .resolve(appImageName)
+
+        runLinuxPackagingScript(
+            buildList {
+                add("bash")
+                add(appImageBuildScript.absolutePath)
+                add(appRoot.absolutePath)
+                add(outputAppImage.absolutePath)
+                add(appImageTool.absolutePath)
+                if (updateInformation != null) {
+                    add("--update-information")
+                    add(updateInformation)
+                }
+                if (websiteUrl != null) {
+                    add("--website-url")
+                    add(websiteUrl)
+                }
+            },
+            "AppImage",
+        )
+
+        val publishedDir = layout.buildDirectory.dir("compose/release-appimages").get().asFile
+        publishedDir.mkdirs()
+        val publishedAppImage = publishedDir.resolve(appImageName)
+        if (outputAppImage.canonicalFile != publishedAppImage.canonicalFile) {
+            outputAppImage.copyTo(publishedAppImage, overwrite = true)
+        }
+        logger.lifecycle("Published Linux AppImage artifact: ${publishedAppImage.absolutePath}")
+    }
+
+    tasks.withType<AbstractJPackageTask>()
+        .matching { it.name == "packageDeb" || it.name == "packageReleaseDeb" }
+        .configureEach {
+            doLast {
+                val effectiveLinuxPackageName = linuxPackageName.orNull ?: packageName.get().lowercase()
+                val effectiveLinuxAppRelease = linuxAppRelease.orNull ?: "1"
+                val artifactPrefix =
+                    "${effectiveLinuxPackageName}_${packageVersion.get()}-${effectiveLinuxAppRelease}_"
+                val debs = destinationDir.get().asFile
+                    .listFiles { file ->
+                        file.isFile && file.name.startsWith(artifactPrefix) && file.extension == "deb"
+                    }
+                    ?.sortedBy { it.name }
+                    .orEmpty()
+                require(debs.size == 1) {
+                    "Expected exactly one current Linux DEB matching $artifactPrefix in " +
+                        "${destinationDir.get().asFile.absolutePath}, found ${debs.size}."
+                }
+                val deb = debs.single()
+                listOf(linuxDebPatchScript, linuxDebVerifyScript).forEach { script ->
+                    val command = listOf("bash", script.asFile.absolutePath, deb.absolutePath)
+                    runLinuxPackagingScript(command, "DEB")
+                }
+            }
+        }
+
+    tasks.withType<AbstractJPackageTask>()
+        .matching { it.name == "packageRpm" || it.name == "packageReleaseRpm" }
+        .configureEach {
+            doLast {
+                val effectiveLinuxPackageName = linuxPackageName.orNull ?: packageName.get().lowercase()
+                val effectiveLinuxAppRelease = linuxAppRelease.orNull ?: "1"
+                val artifactPrefix =
+                    "${effectiveLinuxPackageName}-${packageVersion.get()}-${effectiveLinuxAppRelease}."
+                val rpms = destinationDir.get().asFile
+                    .listFiles { file ->
+                        file.isFile && file.name.startsWith(artifactPrefix) && file.extension == "rpm"
+                    }
+                    ?.sortedBy { it.name }
+                    .orEmpty()
+                require(rpms.size == 1) {
+                    "Expected exactly one current Linux RPM matching $artifactPrefix in " +
+                        "${destinationDir.get().asFile.absolutePath}, found ${rpms.size}."
+                }
+                val rpm = rpms.single()
+                listOf(linuxRpmPatchScript, linuxRpmVerifyScript).forEach { script ->
+                    val command = listOf("bash", script.asFile.absolutePath, rpm.absolutePath)
+                    runLinuxPackagingScript(command, "RPM")
+                }
+            }
+        }
+
+    tasks.withType<AbstractJPackageTask>()
+        .matching { it.name == "packageAppImage" || it.name == "packageReleaseAppImage" }
+        .configureEach {
+            notCompatibleWithConfigurationCache("Linux AppImage artifact publication uses script file operations.")
+            doLast {
+                val packageTask = this as AbstractJPackageTask
+                publishLinuxAppImageOutput(
+                    task = packageTask,
+                    release = packageTask.name == "packageReleaseAppImage",
+                    appImageBuildScript = linuxAppImageBuildScript.asFile,
+                )
+            }
+        }
 }
 
 if (isMacHost) {
